--- a/.pylintrc
+++ b/.pylintrc
@@ -2,7 +2,7 @@
 ignore = venv, tests
 
 [MESSAGES CONTROL]
-disable=R0904, C0114
+disable=R0904, C0114, C0115, C0116
 
 [FORMAT]
 max-line-length=100
